# chess-tutor

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF-endgame-skill.md  HANDOFF-perception.md  HANDOFF-perf.md  HANDOFF-solver.md  HANDOFF-ux.md  HANDOFF-weak-bot-tuning.md  HANDOFF.md  PLAN-cli.md  PLAN-elo-calibration.md  PLAN-multipv-mate-fix.md  PLAN-opening-picker.md  PLAN-perception.md  PLAN-tactic-escape.md  PLAN-teaching-gui.md  PLAN.md  README.md  RESEARCH-perception.md  ROADMAP.md  bands.txt  noise_bench_ux_positions.txt  parity-audit-log.md  w2-refactor-log.md  w4-audit.md
core/: Cargo.toml
core/chess-tutor-cli/: Cargo.toml
core/chess-tutor-cli/src/: board.rs  main.rs
core/chess-tutor-core/: Cargo.toml
core/chess-tutor-core/src/: error.rs  lib.rs
core/chess-tutor-core/src/analysis/: mod.rs  see.rs  threats.rs
core/chess-tutor-core/src/book/: mod.rs
core/chess-tutor-core/src/engine/: mod.rs
core/chess-tutor-core/src/explain/: mod.rs
core/chess-tutor-core/src/game/: mod.rs
core/chess-tutor-core/src/positional/: mod.rs
core/chess-tutor-core/src/search/: mod.rs
core/chess-tutor-core/src/tactics/: mod.rs
core/chess-tutor-ffi/: Cargo.toml  chess_tutor.udl
core/chess-tutor-ffi/src/: lib.rs
core/cli/: Cargo.toml
core/cli/src/: alignments_view.rs  alignments_view_tests.rs  analysis_report.rs  attacks_view.rs  attacks_view_tests.rs  bench.rs  bench_fens.rs  board.rs  cli_args.rs  eval_report.rs  forcing_view.rs  forcing_view_tests.rs  glossary.rs  glossary_tests.rs  main.rs  noise_bench.rs  piece_fmt.rs  piece_fmt_tests.rs  play.rs  retrospective.rs  search_report.rs  settled_audit.rs  settled_audit_tests.rs  square_view.rs  square_view_tests.rs  summary.rs  summary_tests.rs  tactics_view.rs  tactics_view_tests.rs  threats_view.rs  threats_view_tests.rs  uci.rs  uci_shim.rs  uci_shim_tests.rs  units.rs  units_tests.rs
core/cli/src/play/: commands.rs  mod.rs  output.rs  parse.rs
core/cli/src/retrospective/: blocked_center_narration.rs  castling_narration.rs  king_safety_narration.rs  material_narration.rs  mobility_narration.rs  mod.rs  passed_pawns_narration.rs  pawn_structure_narration.rs  pieces_positional_narration.rs  secondary_terms.rs  space_narration.rs  surprise_tag.rs  threats_narration.rs  util.rs
core/engine/: Cargo.toml
core/engine/src/: attacks.rs  attacks_tests.rs  bitbases.rs  bitboard.rs  bitboard_tests.rs  book.rs  calibration.rs  calibration_lookup.rs  calibration_tests.rs  endgame.rs  engine.rs  lib.rs  magics.rs  magics_tests.rs  material.rs  movegen.rs  movegen_tests.rs  movepick.rs  noise.rs  noise_tests.rs  opening_tree.rs  opening_tree_tests.rs  openings.rs  opponent.rs  pawns.rs  pawns_tests.rs  prefetch.rs  psqt.rs  psqt_tests.rs  san.rs  san_tests.rs  search.rs  tt.rs  types.rs  visibility.rs  visibility_tests.rs  zobrist.rs
core/engine/src/analysis/: blocked_center_outcome.rs  castling_outcome.rs  check_followups.rs  check_followups_tests.rs  defusals.rs  defusals_tests.rs  desperado.rs  desperado_tests.rs  forcing_check_chain.rs  forcing_check_chain_tests.rs  initiative_loss.rs  initiative_loss_tests.rs  initiative_outcome.rs  king_safety_outcome.rs  latent_threats.rs  latent_threats_tests.rs  material_outcome.rs  mobility_outcome.rs  mod.rs  move_analysis.rs  move_assessment.rs  move_assessment_tests.rs  overlays.rs  overloading.rs  overloading_tests.rs  passed_pawns_outcome.rs  pawn_structure_outcome.rs  pieces_positional_outcome.rs  silent_sequencing.rs  silent_sequencing_tests.rs  space_outcome.rs  surprise.rs  tactic_escape.rs  tactic_escape_tests.rs  tactic_outcome.rs  tactic_outcome_tests.rs  tactic_util.rs  tactic_util_tests.rs  tactical_mode.rs  tactical_mode_tests.rs  (+7 more)
core/engine/src/endgame/: kbnk.rs  kbpkb.rs  kbpkn.rs  kbppkb.rs  kbpsk.rs  knnk.rs  knnkp.rs  knpk.rs  knpkb.rs  kpk.rs  kpkp.rs  kpsk.rs  kqkp.rs  kqkr.rs  kqkrps.rs  krkb.rs  krkn.rs  krkp.rs  krpkb.rs  krpkr.rs  krppkrp.rs  kxk.rs  mod.rs
core/engine/src/eval/: core.rs  initiative.rs  king.rs  mod.rs  passed.rs  pieces.rs  scale.rs  space.rs  tests.rs  threats.rs  trace.rs
core/engine/src/movepick/: helpers.rs  history.rs  mod.rs  picker.rs  tests.rs
core/engine/src/position/: attack_queries.rs  blockers.rs  fen.rs  fen_tests.rs  make_move.rs  make_move_tests.rs  mod.rs  queries.rs  see.rs
core/engine/src/search/: loop_helpers.rs  mod.rs  move_loop.rs  move_search.rs  negamax.rs  pre_loop.rs  qsearch.rs  run.rs  settled.rs  state.rs  tests.rs
core/engine/src/traps/: damiano.rs  logic.rs  mod.rs  tests.rs
core/engine/src/tt/: mod.rs  storage.rs  tests.rs
core/engine/src/types/: color.rs  direction.rs  misc.rs  mod.rs  moves.rs  piece.rs  square.rs  tests.rs  value.rs
core/engine/tests/: san_pv_walk.rs
core/narration/: Cargo.toml
core/narration/src/: blocked_center_narration.rs  castling_narration.rs  initiative_narration.rs  king_safety_narration.rs  lib.rs  material_narration.rs  mobility_narration.rs  passed_pawns_narration.rs  pawn_structure_narration.rs  pieces_positional_narration.rs  secondary_terms.rs  space_narration.rs  surprise_tag.rs  threats_narration.rs  util.rs
core/teaching/: Cargo.toml
core/teaching/src/: claim.rs  claim_tests.rs  lib.rs  phrasing.rs  phrasing_tests.rs  util.rs
core/ui/: Cargo.toml
core/ui/src/: coaching_view.rs  coaching_view_tests.rs  event.rs  learning_mode.rs  lib.rs  overlays_view.rs  retrospective_view.rs  session.rs  view.rs  worker.rs
core/ui/src/learning_mode/: mod.rs  mod_tests.rs  terms.rs
core/ui/src/retrospective_view/: depth_honesty.rs  desperado.rs  forced_consequences.rs  headline.rs  helpers.rs  initiative.rs  king_safety.rs  material.rs  mobility.rs  (+12 more)
desktop/: Cargo.toml  README.md
desktop/chess-tutor-desktop/: Cargo.toml
desktop/chess-tutor-desktop/src/: main.rs
desktop/src/: event.rs  main.rs  session.rs  view.rs  worker.rs
desktop/src/draw/: action_bar.rs  board.rs  bot_strip.rs  captured.rs  dialog.rs  eval_bar.rs  hint_popover.rs  icon.rs  mod.rs  opening_picker.rs  options.rs  player_strip.rs  settings.rs  side_panel.rs  theme.rs  top_bar.rs
(+89 files in other folders)
