[workspace]
resolver = "2"
members = ["core/engine", "core/narration", "core/ui", "core/cli", "desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 1.82 for `Box::new_uninit` (movepick / history zero-init without a stack
# copy). The toolchain is `stable` (latest); nothing external pins an older
# MSRV, so this just tracks the API the code actually uses.
rust-version = "1.82"

[workspace.lints.clippy]
# Lint opt-ins go here. Keep the engine lint-clean.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Release-fast but VTune/Superluminal/WPA-friendly: keeps `opt-level = 3`
# but disables LTO and unifies-codegen-units so each function survives as
# a distinct symbol with intact line numbers in the PDB. This is what
# lets a sampling profiler attribute hot samples to specific source
# lines instead of "somewhere in this giant LTO-merged blob."
#
# The trade-off: ~15-25 % slower than `release` because cross-crate
# inlining is gone. Use this profile for *finding* hotspots; use
# `release` for *measuring* the impact of fixes. Don't ship binaries
# from this profile.
[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 256
incremental = false
