[workspace]
resolver = "2"
members = [
    "chess-tutor-core",
    "chess-tutor-ffi",
    "chess-tutor-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Chess Tutor contributors"]
repository = "https://github.com/unbrokentechnology/chess-tutor"
license = "UNLICENSED"

[workspace.dependencies]
shakmaty = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
