[workspace]
resolver = "2"
members = ["engine", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.lints.clippy]
# Lint opt-ins go here. Keep the engine lint-clean.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Release-equivalent optimisations but with PDBs so VTune / Superluminal /
# WPA can show Rust function names and line numbers. Don't use for
# shipping or benchmarking — LTO is weaker here and binaries are bigger.
[profile.profiling]
inherits = "release"
debug = true
strip = false
