[package]
name = "chess-tutor-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "chess-tutor-desktop"
path = "src/main.rs"

[dependencies]
chess-tutor-engine = { path = "../core/engine" }
chess-tutor-teaching = { path = "../core/teaching" }
chess-tutor-ui = { path = "../core/ui" }
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
