[package]
name = "chess-tutor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "chess-tutor"
path = "src/main.rs"

[dependencies]
chess-tutor-engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
