[package]
name = "chess-tutor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "chess-tutor"
path = "src/main.rs"

[dependencies]
chess-tutor-engine = { path = "../engine" }
chess-tutor-narration = { path = "../narration" }
chess-tutor-ui = { path = "../ui" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Heap profiler. Disabled by default; enable via `--features dhat-heap`
# to get per-source-line allocation attribution. Adds ~30 % runtime
# overhead and writes `dhat-heap.json` next to the binary on exit.
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]
