[package]
name = "chess-tutor-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "chess-tutor"
path = "src/main.rs"

[dependencies]
chess-tutor-engine = { path = "../engine" }
chess-tutor-narration = { path = "../narration" }
chess-tutor-ui = { path = "../ui" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Agent-facing JSON output (`--json` on every FEN-taking subcommand).
# The schema is local to this crate today; if/when the FFI work needs to
# share these structs, they move to a `chess-tutor-types` crate or get
# serde derives behind an `engine` feature flag — for now we don't add
# serde to the engine since it's pulled in here.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Heap profiler. Disabled by default; enable via `--features dhat-heap`
# to get per-source-line allocation attribution. Adds ~30 % runtime
# overhead and writes `dhat-heap.json` next to the binary on exit.
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]
