[package]
name = "chess-tutor-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "chess_tutor_ui"

[dependencies]
chess-tutor-engine = { path = "../engine" }
# The retrospective view consumes the shared Claim IR + translator
# (`claim` / `phrasing`) from chess-tutor-teaching so the GUI and CLI
# render headline/category prose through one perspective-correct
# translator instead of two drifting copies (PLAN decision A/B).
chess-tutor-teaching = { path = "../teaching" }
