[package]
name = "chess-tutor-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Chess Tutor contributors"]
repository = "https://github.com/unbrokentechnology/chess-tutor"
license = "UNLICENSED"
description = "Windows (and Linux/macOS) GUI for Chess Tutor. Single-binary egui app."
publish = false

[[bin]]
name = "chess-tutor-desktop"
path = "src/main.rs"

[dependencies]
chess-tutor-core = { path = "../../core/chess-tutor-core" }

# eframe bundles egui + the native windowing + wgpu renderer. Single binary,
# no runtime deps on .NET, Qt, GTK, etc.
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
